--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "govuk-prototype-kit",
   "description": "Rapidly create HTML prototypes of GOV.UK services",
-  "version": "9.10.0",
+  "version": "9.11.0",
   "private": true,
   "engines": {
-    "node": "^12.0.0"
+    "node": ">=10.0.0 <15.0.0"
   },
   "scripts": {
     "start": "node start.js",
@@ -32,7 +32,7 @@
     "fs-extra": "^9.0.1",
     "git-install": "^0.5.2",
     "govuk-elements-sass": "^3.1.3",
-    "govuk-frontend": "^3.9.0",
+    "govuk-frontend": "^3.10.0",
     "govuk_frontend_toolkit": "^7.5.0",
     "govuk_template_jinja": "^0.24.1",
     "gulp": "^4.0.0",
@@ -41,7 +41,7 @@
     "gulp-sourcemaps": "^2.6.0",
     "inquirer": "^7.3.2",
     "keypather": "^3.0.0",
-    "marked": "^0.8.2",
+    "marked": "^1.2.0",
     "moment": "^2.27.0",
     "nhsuk-frontend": "^3.1.0",
     "notifications-node-client": "^4.8.0",
